<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/maroon">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title" />
<!--  
    <Button
        android:id="@+id/startGPATermAdd"
        android:layout_width="250dip"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dip"
        android:text="@string/StrStartGPATerm" />-->
    <!-- android:onClick="startGPATerm" -->
    
    <Button
        android:id="@+id/startGPATermCalc"
        android:layout_width="250dip"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dip"
        android:text="@string/StrStartGPACalc" />

    <Button
        android:id="@+id/startGPAOverAdd"
        android:layout_width="250dip"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/StrStartGPAOverall" />

</LinearLayout>